# capnls

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: capnp.rs  file.rs  lib.rs  main.rs  protoc.rs  workspace.rs
testdata/: dep.capnp  error.capnp  other.capnp  simple.capnp
testdata/folder/: stuff.capnp  what.capnp
tests/: integration_test.rs
